eclipseWorkspace/.metadata/.plugins/org.eclipse.cdt.ui/16.03.03 Gyro Auto Code.build.log
19:38:09 **** Rebuild of configuration Debug for project 16.03.03 Gyro Auto Code ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\gsera/wpilib/cpp/current/include" "-IC:\\Users\\gsera\\Desktop\\FYRE-Programming-2015-2016\\eclipseWorkspace\\16.03.03 Gyro Auto Code\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
..\src\Robot.cpp:22:26: error: 'constexpr' needed for in-class initialization of static data member 'const float Robot::Kp' of non-integral type [-fpermissive]
  static const float Kp = 0.03; // TAAAAAKE ME WITH YOU
                          ^

19:38:10 Build Finished (took 1s.215ms)

